[package]
name = "off_image_relay"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
image = "0.25.5"
reqwest = { version = "0.12", features = ["stream"] }
rocksdb = { version = "0.23.0" }
#rocksdb = { version = "0.23.0", features = [
#    "bindgen-static",
#    "snappy",
#    "lz4",
#    "zstd",
#    "zlib",
#    "bzip2",
#], default-features = false }
cjstream = { git = "https://github.com/jbrummack/cjstream.git", rev = "ebbd90af41a388481eb81e2c19396fa7ae619a9f" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
#heed = "0.21.0"
#uuid = { version = "1.12.1", features = ["v4"] }
#bincode = "1.3.3"
tokio = { version = "1.43.0", features = ["full"] }
local-ip-address = "0.6.3"
futures-util = "0.3.31"
blake2 = "0.10.6"
#hex = "0.4.3"
env_logger = "0.11.6"
log = "0.4.25"
